[tool.poetry]
name = "mqsrv"
version = "0.1.0"
description = ""
authors = ["daleydeng <daleydeng@qingtong123.com>"]

[tool.poetry.dependencies]
python = "^3.8"
eventlet = "^0.31"
gevent = "^21"
kombu = "^5.1"
easydict = "^1.9"
yaml = "^5.4"
jinja2 = "^3"
toml = "^0.10"
tblib = "^1.7"
jsonpickle = "^2.0"
structlog = "^21"
msgpack-python = "^1.0"
msgpack-numpy = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
